[gd_scene load_steps=14 format=2]

[ext_resource path="res://CityHall/NPC/elder.png" type="Texture" id=1]
[ext_resource path="res://NPCScripts/Elder.gd" type="Script" id=2]
[ext_resource path="res://Quests/QuestDialogue.tscn" type="PackedScene" id=3]
[ext_resource path="res://Dialogues/Dialouge.tscn" type="PackedScene" id=4]
[ext_resource path="res://icon.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=16]
resource_local_to_scene = true
antialiased = false
font_path = "res://SRAFreePixelFontPack/PixelMiddle.ttf"

[sub_resource type="DynamicFont" id=17]
resource_local_to_scene = true
size = 23
font_data = SubResource( 16 )

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 22.5, 14.125 )

[node name="Elder" type="AnimatedSprite"]
position = Vector2( 666, -22 )
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 28 )
frame = 3
playing = true
script = ExtResource( 2 )

[node name="ElderLabel" type="Label" parent="."]
margin_left = -42.0
margin_top = -38.0
margin_right = 60.0
margin_bottom = -17.0
custom_colors/font_color = Color( 0.854902, 0.52549, 0.243137, 1 )
custom_fonts/font = SubResource( 17 )
text = "Town's hubby"

[node name="Area2D" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2.5, 1.125 )
shape = SubResource( 29 )

[node name="QuestDialogue" parent="." instance=ExtResource( 3 )]

[node name="Dialogue" parent="." instance=ExtResource( 4 )]

[node name="QuestAvailableTestIndicator" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 2.33334, -46.6667 )
scale = Vector2( 0.84375, 0.854167 )
texture = ExtResource( 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="choose_class" from="QuestDialogue" to="." method="_on_QuestDialogue_choose_class"]
[connection signal="dialogue_done" from="QuestDialogue" to="." method="_on_QuestDialogue_dialogue_done"]
